--- a/index.html
+++ b/index.html
@@ -4,44 +4,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Concert</title>
+    <title>Le Louvre</title>
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/satoshi.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon">
     <link href="https://api.fontshare.com/v2/css?f[]=chillax@200&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <div class="Loadingspinner">
+        <span class="loader"></span>
+    </div>
 
 
     <nav id="navbar" class="myNavbar position-fixed mx-auto start-50 translate-middle-x">
-        <div class="d-flex justify-content-around h-100 align-items-center">
-            <p class="mainFont mainColor pt-2 fs-2">Concert.</p>
-            <ul class=" d-lg-flex pt-2 ">
+        <div class="d-flex justify-content-around h-100 align-items-center pt-2">
+            <p class="mainFont mainColor pt-2 fs-2">Louvre.</p>
+            <button id="toggleNavbar" class="btn d-flex justify-content-end">
+                <i class=" fa-solid fa-bars mainColor p-2 rounded-1 fa-2x"></i>
+            </button>
+            <ul>
                 <li class="me-1 position-relative">
                     <a href="#home">Home</a>
                 </li>
                 <li class="me-1 position-relative ">
-                    <a href="#about">About</a>
+                    <a href="#jewelry">Jewelry</a>
                 </li>
                 <li class="me-1 position-relative ">
-                    <a href="#counter">Counter</a>
+                    <a href="#tour">Tour</a>
                 </li>
                 <li class="position-relative ">
                     <a href="#contact">Contact</a>
                 </li>
             </ul>
+
+
         </div>
     </nav>
 
 
     <section id="home" class="bgLayer">
+
         <div class="darkLayer">
             <div class="container vh-100 d-flex flex-column align-items-center justify-content-center">
                 <div class="d-flex justify-content-center align-items-center">
-                    <h1 class="text-center d-inline-block mx-4">Egyption</h1>
-                    <h2 class="text-center">Concert!</h2>
+                    <h1 class="text-center d-inline-block mx-4">The</h1>
+                    <h2 class="text-center">Louvre</h2>
                 </div>
                 <div>
                     <p>July 28th, 2024</p>
@@ -49,38 +59,35 @@
             </div>
         </div>
 
-        <div id="leftSideBar" class="d-flex justify-content-center flex-column">
+        <div id="leftSideBar" class="d-flex justify-content-center flex-column position-fixed py-5">
+            <div class="py-5">
+                <div class="customize position-absolute">
+                    <span class="d-block text-center px-3 py-3 fs-5">Customize website colors and background</span>
+                </div>
+                <div class="open d-flex align-items-center">
+                    <i class="ms-3 fa-solid fa-bars fa-3x"></i>
+                    <!-- <span class="ms-3 fs-4">Open</span> -->
+                </div>
+                <div class="colorsContainer d-flex justify-content-around w-100 my-5 pt-5">
+                    <div class="colors gold"></div>
+                    <div class="colors red"></div>
+                    <div class="colors purple"></div>
+                    <div class="colors white"></div>
+                    <div class="colors blue"></div>
+                    <div class="colors black"></div>
+                </div>
 
-            <div class="open d-flex align-items-center">
-                <i class="ms-3 fa-solid fa-bars fa-3x"></i>
-                <span class="ms-3 fs-4">Open</span>
-            </div>
-            <div class="d-flex justify-content-around w-100 mb-5">
-                <div class="colors gold"></div>
-                <div class="colors red"></div>
-                <div class="colors purple"></div>
-                <div class="colors white"></div>
-                <div class="colors blue"></div>
-            </div>
+                <div class="d-flex justify-content-around w-100 pt-3">
 
-            <div class="d-flex justify-content-around w-100">
-                <div>
-                    <img class="imgs w-75" src="images/1.jpg" alt="">
-                </div>
-                <div>
-                    <img class="imgs w-75" src="images/5.jpg" alt="">
-                </div>
-                <div>
-                    <img class="imgs w-75" src="images/3.jpg" alt="">
-                </div>
-                <div>
-                    <img class="imgs w-75" src="images/6.jpeg" alt="">
-                </div>
-                <div>
-                    <img class="imgs w-75" src="images/7.jpg" alt="">
-                </div>
-                <div>
-                    <img class="imgs w-75" src="images/6.jpg" alt="">
+                    <div>
+                        <img class="imgs w-75" src="images/14.jpg" alt="">
+                    </div>
+                    <div>
+                        <img class="imgs w-75" src="images/15.jpg" alt="">
+                    </div>
+                    <div>
+                        <img class="imgs w-75" src="images/16.jpg" alt="">
+                    </div>
                 </div>
             </div>
 
@@ -90,81 +97,108 @@
 
 
 
-    <section id="about" class="py-5">
+    <section id="jewelry" class="jewelry py-5 position-relative">
+        <p class="text-center mainFont mainColor fa-4x pt-5">Sample of our Jewelries</p>
+
         <div class="container py-5 d-flex flex-column justify-content-center align-items-center h-100">
-
             <div class="w-50">
-                <h3 class="bandName mainFont py-2 m-0 text-center">First Band</h3>
-                <div class="brownBg aha">
-                    <h4 class="mainColor mainFont fw-bold fst-italic pt-1">“Cairokee”</h4>
-                    <p class="px-4">Cairokee is an Egyptian rock band that was officially launched in 2003 but came to
-                        prominence
-                        with its revolutionary music following the Egyptian Revolution of 2011 due to its
-                        politically-inspired lyrics and protest songs released following the uprising.</p>
-                </div>
-            </div>
+                <h3 class="jewlName px-3 mainFont py-3 m-0 text-center">The historical Regent diamond</h3>
 
-            <div class="w-50">
-                <h3 class="bandName mainFont py-2 m-0 text-center">Second Band</h3>
                 <div class="brownBg">
-                    <h4 class="mainColor mainFont fw-bold fst-italic pt-1">“Cairokee”</h4>
-                    <p class="px-4">Cairokee is an Egyptian rock band that was officially launched in 2003 but came to
-                        prominence
-                        with its revolutionary music following the Egyptian Revolution of 2011 due to its
-                        politically-inspired lyrics and protest songs released following the uprising.</p>
+                    <h4 class="mainColor mainFont fw-bold fst-italic pt-1">“The historical Regent diamond”</h4>
+                    <p class="px-4">The 140-carat ‘Regent’ diamond – one of the most famous in the world – is
+                        exceptional in terms of size, weight and purity and said to be ‘of the first water’, i.e.
+                        perfectly transparent. It was found in India in 1698 and cut using the recently invented
+                        brilliant-cut technique that intensified its dazzle. It was the largest known diamond at the
+                        time; due to its exorbitant price, even the Sun King decided against buying it. Finally in 1717,
+                        Louis XIV’s nephew Philippe d’Orléans, who governed France as Regent until Louis XV came of age,
+                        purchased it and gave it his title. After that time, the Regent diamond was worn by all the
+                        French rulers, adorning among others the crown of Louis XV, the sword of Napoleon I and the
+                        diadem of Empress Eugénie.</p>
+                </div>
+
+                <div class="firstJewl jewelryLeft position-absolute justify-content-end align-items-center">
+                    <img src="images/jew1.png" alt="">
+                </div>
+
+                <div class="firstJewl jewelryRight position-absolute justify-content-start align-items-center">
+                    <img src="images/jew1.png" alt="">
                 </div>
             </div>
 
             <div class="w-50">
-                <h3 class="bandName mainFont py-2 m-0 text-center">Third Band</h3>
+                <h3 class="jewlName px-3 mainFont py-3 m-0 text-center">Hortensia' pink diamond</h3>
+
                 <div class="brownBg">
-                    <h4 class="mainColor mainFont fw-bold fst-italic pt-1">“Cairokee”</h4>
-                    <p class="px-4">Cairokee is an Egyptian rock band that was officially launched in 2003 but came to
-                        prominence
-                        with its revolutionary music following the Egyptian Revolution of 2011 due to its
-                        politically-inspired lyrics and protest songs released following the uprising.</p>
+                    <h4 class="mainColor mainFont fw-bold fst-italic pt-1">“Hortensia' pink diamond”</h4>
+                    <p class="px-4">The Hortensia diamond was mined in India as one of the Golconda Diamonds, and is
+                        part of the French Crown Jewels. It is a 20 carat diamond of pale orange-pink colour, cut into a
+                        five-sided shape, and with a "feather" (a fine visible crack) running from its tip to its
+                        girdle.</p>
                 </div>
+
+                <div class="secondJewl jewelryLeft position-absolute justify-content-end align-items-center ">
+                    <img src="images/jew2.png" alt="">
+                </div>
+
+                <div class="secondJewl jewelryRight position-absolute justify-content-start align-items-center">
+                    <img src="images/jew2.png" alt="">
+                </div>
+
             </div>
 
             <div class="w-50">
-                <h3 class="bandName mainFont py-2 m-0 text-center">Fourth Band</h3>
+                <h3 class="jewlName px-3 mainFont py-3 m-0 text-center">Neptune’s ship</h3>
+
                 <div class="brownBg">
-                    <h4 class="mainColor mainFont fw-bold fst-italic pt-1">“Cairokee”</h4>
-                    <p class="px-4">Cairokee is an Egyptian rock band that was officially launched in 2003 but came to
-                        prominence
-                        with its revolutionary music following the Egyptian Revolution of 2011 due to its
-                        politically-inspired lyrics and protest songs released following the uprising.</p>
+                    <h4 class="mainColor mainFont fw-bold fst-italic pt-1">“Neptune’s ship”</h4>
+                    <p class="px-4">Acquired by Louis XIV, this lapis lazuli ‘nef’ (ship-shaped table ornament) with its
+                        gilt silver and enamelled gold mount is a masterpiece of Parisian precious metalwork. It
+                        represents the ship of the Roman sea god Neptune, adorned with flower garlands and fantastic
+                        creatures.</p>
                 </div>
+
+                <div class="thirdJewl jewelryLeft position-absolute justify-content-center align-items-center ">
+                    <img src="images/jew3.png" alt="">
+                </div>
+
+                <div class="thirdJewl jewelryRight position-absolute justify-content-center align-items-center">
+                    <img src="images/jew3.png" alt="">
+                </div>
+
             </div>
+
 
         </div>
     </section>
 
 
 
-    <section id="counter">
+    <section id="tour">
         <div class="darkLayer py-5">
             <div class="container py-5">
-                <div class="row py-5">
-                    <div class="col-md-3">
+                <h3 class="text-center mainFont mainColor fa-4x ">Welcome to Le Lovure</h3>
+                <p class="text-center mainFont mainColor fa-3x">Join our tour in</p>
+                <div class="row py-5 mx-auto w-75">
+                    <div class="col-md-3 mb-4">
                         <div class="time py-5 text-center mainColor fs-2 fw-bold">
                             <span id="days"></span>
                             <span>D</span>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 mb-4">
                         <div class="time py-5 text-center mainColor fs-2 fw-bold">
                             <span id="hours"></span>
                             <span>H</span>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 mb-4">
                         <div class="time py-5 text-center mainColor fs-2 fw-bold">
                             <span id="minutes"></span>
                             <span>M</span>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 mb-4">
                         <div class="time py-5 text-center mainColor fs-2 fw-bold">
                             <span id="seconds"></span>
                             <span>S</span>
@@ -191,18 +225,17 @@
             </div>
 
             <div class="row">
+
                 <div class="col-md-6 mainColor">
-                    <div class="d-flex flex-column mb-5">
+
+                    <div class="d-flex flex-column ">
                         <h5 class="fa-2x mainFont mb-3">Contact Info</h5>
-                        <p class="lineHeight ps-3 pe-5 mb-5">Why you should hire me writeup Lorem ipsum dolor sit amet,
-                            consectetuer
-                            adipiscing elit.
-                            Aenean
-                            commodo
-                            ligula eget dolor. Aenean massa. Cum sociis natoque nascetur ridiculus mus.</p>
+                        <p class="lineHeight ps-3 pe-5 mb-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Accusantium obcaecati porro assumenda perspiciatis aspernatur necessitatibus maiores eos
+                            nisi animi tempora. Totam maxime similique sit laborum.</p>
                         <div class="d-flex align-items-center ps-3">
                             <i class="fa-solid fa-location-dot me-2"></i>
-                            <p class="m-0 p-0">New alamein city, Egypt</p>
+                            <p class="m-0 p-0">Paris, France</p>
                         </div>
                         <div class="d-flex align-items-center mt-4 ps-3">
                             <i class="fa-regular fa-envelope me-2"></i>
@@ -213,24 +246,27 @@
                             <p class="m-0 p-0">001-000-000-000</p>
                         </div>
                     </div>
-                    <div class="contactIcons my-4 fs-4">
+
+                    <div class="contactIcons my-5 fs-4">
                         <a href=""><i class="p-3 rounded-3 me-3 fa-brands fa-twitter"></i></a>
                         <a href=""><i class="p-3 rounded-3 me-3 fa-brands fa-instagram"></i></a>
                         <a href=""><i class="p-3 rounded-3 me-3 fa-brands fa-facebook-f"></i></a>
                         <a href=""><i class="p-3 rounded-3 me-3 fa-brands fa-dribbble"></i></a>
                         <a href=""><i class="p-3 rounded-3 me-3 fa-brands fa-pinterest-p"></i></a>
                     </div>
+
                 </div>
 
-                <div class="col-md-6 mainColor">
+                <div class="col-md-6 mainColor mt-5">
 
                     <form class="d-flex flex-column">
                         <input type="text" placeholder="Enter your name" class="mb-4">
                         <input type="email" placeholder="Enter your email" class="mb-4">
                         <textarea class="mb-4" placeholder="Enter message" cols="30" rows="5"></textarea>
-                        <p id="userMessageParagraph" class="fs-5"><span id="userMessageSpan">100</span> Character Reamining</p>
+                        <p id="userMessageParagraph" class="fs-5"><span id="userMessageSpan">100</span> Character
+                            Reamining</p>
                         <p id="errorMessage" class="fs-5 text-danger">You've excceded the limit</p>
-                        <button class="mx-auto">Send Message</button>
+                        <button type="button" class="mx-auto">Send Message</button>
                     </form>
 
                 </div>
