--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-    <div class="Loadingspinner">
+    <!-- <div class="Loadingspinner">
         <span class="loader"></span>
-    </div>
+    </div> -->
 
 
     <nav id="navbar" class="myNavbar position-fixed mx-auto start-50 translate-middle-x">
@@ -62,7 +62,7 @@
         <div id="leftSideBar" class="d-flex justify-content-center flex-column position-fixed py-5">
             <div class="py-5">
                 <div class="customize position-absolute">
-                    <span class="d-block text-center px-3 py-3 fs-5">Customize website colors and background</span>
+                    <span class="d-block text-center px-3 py-3 fs-4 fst-italic">Customize website colors and background</span>
                 </div>
                 <div class="open d-flex align-items-center">
                     <i class="ms-3 fa-solid fa-bars fa-3x"></i>
@@ -117,11 +117,11 @@
                         diadem of Empress Eugénie.</p>
                 </div>
 
-                <div class="firstJewl jewelryLeft position-absolute justify-content-end align-items-center">
+                <div class="firstJewl jewelryLeft position-absolute justify-content-center align-items-center">
                     <img src="images/jew1.png" alt="">
                 </div>
 
-                <div class="firstJewl jewelryRight position-absolute justify-content-start align-items-center">
+                <div class="firstJewl jewelryRight position-absolute justify-content-center align-items-center">
                     <img src="images/jew1.png" alt="">
                 </div>
             </div>
@@ -137,11 +137,11 @@
                         girdle.</p>
                 </div>
 
-                <div class="secondJewl jewelryLeft position-absolute justify-content-end align-items-center ">
+                <div class="secondJewl jewelryLeft position-absolute justify-content-center align-items-center ">
                     <img src="images/jew2.png" alt="">
                 </div>
 
-                <div class="secondJewl jewelryRight position-absolute justify-content-start align-items-center">
+                <div class="secondJewl jewelryRight position-absolute justify-content-center align-items-center">
                     <img src="images/jew2.png" alt="">
                 </div>
 
