--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-    <!-- <div class="Loadingspinner">
+    <div class="Loadingspinner">
         <span class="loader"></span>
-    </div> -->
+    </div>
 
 
     <nav id="navbar" class="myNavbar position-fixed mx-auto start-50 translate-middle-x">
