--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
                     <span class="d-block text-center px-3 py-3 fs-4 fst-italic">Customize website colors and background</span>
                 </div>
                 <div class="open d-flex align-items-center">
-                    <i class="ms-3 fa-solid fa-bars fa-3x"></i>
-                    <!-- <span class="ms-3 fs-4">Open</span> -->
+                    <i class="ms-3 fa-solid fa-gears fa-3x"></i>
                 </div>
                 <div class="colorsContainer d-flex justify-content-around w-100 my-5 pt-5">
                     <div class="colors gold"></div>
@@ -117,11 +116,11 @@
                         diadem of Empress Eugénie.</p>
                 </div>
 
-                <div class="firstJewl jewelryLeft position-absolute justify-content-center align-items-center">
+                <div class="firstJewl jewelryLeft position-absolute justify-content-start align-items-center">
                     <img src="images/jew1.png" alt="">
                 </div>
 
-                <div class="firstJewl jewelryRight position-absolute justify-content-center align-items-center">
+                <div class="firstJewl jewelryRight position-absolute justify-content-end align-items-center">
                     <img src="images/jew1.png" alt="">
                 </div>
             </div>
@@ -137,11 +136,11 @@
                         girdle.</p>
                 </div>
 
-                <div class="secondJewl jewelryLeft position-absolute justify-content-center align-items-center ">
+                <div class="secondJewl jewelryLeft position-absolute justify-content-start align-items-center ">
                     <img src="images/jew2.png" alt="">
                 </div>
 
-                <div class="secondJewl jewelryRight position-absolute justify-content-center align-items-center">
+                <div class="secondJewl jewelryRight position-absolute justify-content-end align-items-center">
                     <img src="images/jew2.png" alt="">
                 </div>
 
@@ -158,11 +157,11 @@
                         creatures.</p>
                 </div>
 
-                <div class="thirdJewl jewelryLeft position-absolute justify-content-center align-items-center ">
+                <div class="thirdJewl jewelryLeft position-absolute justify-content-start align-items-center ">
                     <img src="images/jew3.png" alt="">
                 </div>
 
-                <div class="thirdJewl jewelryRight position-absolute justify-content-center align-items-center">
+                <div class="thirdJewl jewelryRight position-absolute justify-content-end align-items-center">
                     <img src="images/jew3.png" alt="">
                 </div>
 
